# Compiler

./: README.md
src/: README.md
src/Compiler/: CMakeLists.txt  bindings.cpp  compiler_main.cpp  declaration.cpp  expression.cpp  function.cpp  hshlex.l  hshparser.y  statement.cpp  translation_unit.cpp  type.cpp
src/Compiler/include/: bindings.hpp  declaration.hpp  expression.hpp  function.hpp  node.hpp  statement.hpp  translation_unit.hpp  type.hpp
src/Compiler/test/: test.s
src/Compiler/test/stand/: add.s  fib.s  fib_recusive.s  for.s  function_call.c  function_call.s  global.s  if_else.s  large_int.s  mult.s  recursion.s  short.s  while.s
src/IR/: CMakeLists.txt  hshlex.l  hshparser.y  types.cpp  types.hpp
src/Parser/Hshparser/: CMakeLists.txt  hshlex.l  hshparser.y  input.c  parser_main.cpp
src/Parser/Hshparser/myast/: ast.hpp  ast_base.hpp  ast_declaration.hpp  ast_function.hpp  ast_primitives.hpp  ast_statement.hpp  ast_top.hpp
src/lexer/: CMakeLists.txt  c_lexer.hpp  hshlex.l  main.cpp
